--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css"> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="bootstrap.bundle.js"></script>
+    <!-- <script src="bootstrap.js"></script> -->
     
 </head>
 <body>
@@ -25,7 +25,7 @@
               <div class="collapse navbar-collapse ms-5" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-pills">
                   <li class="nav-item ms-5">
-                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    <a class="nav-link active" href="#home">Home</a>
                   </li>
                   <li class="nav-item ms-5">
                     <a class="nav-link" href="#services">Nos Servces</a>
@@ -105,7 +105,7 @@
 
 <!-- nos services -->
 <div class="row" id="services">
-  <h3 class="text-center text-info mt-4 p-3 pt-4">Nos differents servives</h3>
+  <h3 class="text-center text-info mt-4 p-3 pt-4 t-apropos">Nos differents servives</h3>
 
   <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
     <div class="card" style="width: 18rem;">
@@ -226,89 +226,93 @@
 
 <!-- nos formations qualifiees -->
 <div class="row" id="formations">
-  <h3 class="text-center text-info mt-4 p-3">Nos formations</h3>
+  <h3 class="text-center text-info mt-4 p-3 t-apropos">Nos formations</h3>
    
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
+    <div class="card sec-bur">
       <div class="card-header">
-        Featured
+        En  Ligne | Presentielle
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card- text-info">Secretariat Bureautique</h5>
+        <p class="card-text text-white">Formation tres avances de la suite microsoft office (Word, Excel,Powerpoint , Publisher)</p>
+        <a href="#" class="btn btn-primary">En savoir plus</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
-      <div class="card-header">
-        Featured
+    <div class="card text-dark sec-dec">
+      <div class="card-header text-primary">
+        Presentielle
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title text-info">Secretariat de Direction</h5>
+        <p class="card-text">Formations Avances de la suite office.
+          Technique de communication en entreprise
+        </p>
+        <a href="#" class="btn btn-primary text-dark">En savoir plus</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
+    <div class="card text-dark market">
       <div class="card-header">
-        Featured
+        En Ligne | Presentielle
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title text-info">Marketing Digital</h5>
+        <p class="card-text text-secondary"> Maitrise de l'outils informatique,des aspect des reseaux sociaux et la communications avec les clients a distance</p>
+        <a href="#" class="btn btn-primary">En savoir plus</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
-      <div class="card-header">
-        Featured
+    <div class="card dev-web">
+      <div class="card-header text-dark">
+        En Ligne | Presentielle
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title text-warning">Developpement D'Application Web</h5>
+        <p class="card-text text-dark">Formations axe sur le HTML, CSS, BOOTSTRAP, PYTHON, DJANGO.
+          PHP et LARAVEL Framework
+        </p>
+        <a href="#" class="btn btn-primary">En savoir plus</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
+    <div class="card dev-mobil">
       <div class="card-header">
-        Featured
+        En Ligne | Presentielle
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title text-danger">Developpement D'applications Mobile</h5>
+        <p class="card-text">Formations complete sur KOTLIN, ANDROID-STUDIOS et Cross-platform FLUTTER , utilisation des API ,et IA</p>
+        <a href="#" class="btn btn-primary">En savoir plus</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
+    <div class="card securite">
       <div class="card-header">
-        Featured
+        En Ligne | Presentielle 
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title text-warning">Cybersecurite et Hacking Ethique</h5>
+        <p class="card-text">Maitrise Complete de NMAP,METASPLOIT, KALI LINUX, BURSUITE , RESEAUX ET SECURITES DES RESEAUX</p>
+        <a href="#" class="btn btn-primary">En savoir plus</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-6 col-lg-4 mt-3 p-3">
-    <div class="card">
+    <div class="card linux">
       <div class="card-header">
-        Featured
+        En Ligne | Presentielle
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title text-info">Administration LINUX et RESEAU</h5>
+        <p class="card-text">deployement des serveux sur linux, securite des serveurs linux, maitrises des ligne de commande, mettre une entreprise en reseaux</p>
+        <a href="#" class="btn btn-primary">En savoir plus</a>
       </div>
     </div>
   </div>
@@ -316,27 +320,27 @@
 </div>
 
 
-
-<div class="row justify-content-center align-items-center" id="apropos">
-  <h4 class="text-center text-info mt-4 p-1 text-uppercase">A propos de nous </h4>
-  <h4 class="text-center text-info  ">Notre equipes chevronees et tres qualifies dans le domaines de l'IT</h4>
-<div class="col-12 col-lg-3"></div>
-  <div class=" col-12 col-lg-6  justify-content-center align-items-center">
-    <div class="col-12">
+<!-- justify-content-center align-items-center -->
+<div class="row" id="apropos">
+  <h4 class="text-center text-info mt-4 p-4 text-uppercase t-apropos">A propos de nous </h4>
+  <!-- <div class="col-12 col-lg-3"></div> -->
+  <h4 class="text-center text-info t-apropos p-4 mt-4 ">Notre equipes chevronees et tres qualifies dans le domaines de l'IT</h4>
+  <div class=" col-12 col-lg-7 information">
+    <div class="col-12 sec">
         <p>Chez CYBERCORPS.CM, nous comprenons l'importance cruciale de la sécurité informatique dans un monde de plus en plus connecté. 
         C'est pourquoi nos experts en cyber sécurité mettent tout en œuvre pour vous offrir des solutions personnalisées et 
         efficaces pour protéger votre entreprise des menaces numériques.
         </p>
     </div>
 
-    <div class="col-12">
+    <div class="col-12 dev">
         <p>
             En parallèle, notre équipe de formateurs qualifiés vous propose des formations pointues en programmation des logiciels.
              Que vous soyez débutant ou déjà initié, nos cours adaptés à tous les niveaux vous permettront d'acquérir 
             les compétences nécessaires pour maîtriser les langages de programmation les plus demandés sur le marché.
         </p>
     </div>
-    <div class="col-12">
+    <div class="col-12 inv">
         <p>
             Chez CYBERCORPS.CM, nous croyons en l'innovation, en la qualité et en la sécurité. Rejoignez-nous dès 
             aujourd'hui pour bénéficier de notre expertise et propulser votre entreprise vers un avenir numérique sécurisé et performant.
@@ -345,15 +349,27 @@
         </p>
     </div>
   </div>
-<div class="col-12 col-lg-3"></div>
+  <!-- <div class="col-12 col-lg-1"></div> -->
+  <div class="col-12 col-lg-5 apropos-img">
+    <div class="col-12">
+      <img src="images/svg1.svg" alt="image" srcset="" class="img-rounded align-items-end justify-content-end">
 
+    </div>
+  </div>
+ 
 
 </div>
 <!-- nos contact -->
-<div class="row justify-content-center align-items-center" id="contact">
-  <h4 class="text-center text-info mt-4 p-3 ">Nous contactez</h4>
-<div class="col-12 col-md-4"></div>
-  <div class="col-12 col-md-4 justify-content-center align-items-center">
+<div class="row" id="contact">
+  <h4 class="text-center text-info mt-4 p-4 t-apropos ">Nous contactez</h4>
+  <div class="col-12 col-md-6 apropos-img mt-2 p-2">
+    <div class="col-12">
+      <img src="images/svg4.svg" alt="svg image" srcset="" class="img-rounded">
+    </div>
+  </div>
+
+  <!-- justify-content-start align-items-start -->
+  <div class="col-12 col-md-5 p-5 mt-4 formulaire">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Full Name</label>
             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
@@ -370,19 +386,23 @@
             <button class="btn btn-primary" type="button">Button</button>
         </div>
   </div>
-  <div class="col-md-4 col-12"></div>
+  <div class="col-md-1 col-12"></div>
 
 </div>
 
 <!-- fin contact -->
 <!-- avis abonnees -->
 <div class="row">
-<h3>ce que nos utilisateurs pensent de nous </h3>
-<div class="card text-center" style="width: 18rem;">
+  <h3 class="t-apropos mt-4 p-4 mb-3 text-uppercase">Ce que nos clients pensent de nous!!! </h3>
+  <div class="card text-center mb-2 " style="width: 18rem;">
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title text-info">Orange Cameroun</h5>
+    <p class="card-text">Cette Start-Up est certe Jeune mais dispose d'un talent incroyable. Merci de votre soutiens.
+      et la formatin de mes colloborateurs contre les cyber attaques.
+    </p>
+    <p>
+      <!-- le nombre d'etoile que donne la orange -->
+    </p>
   </div>
 </div>
 
