services et formations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   </li>
 
                   <li class="nav-item ms-5">
-                    <a class="nav-link" href="#apropos">A Propos</a>
+                    <a class="nav-link" href="#apropos">Apropos de nous</a>
                   </li>
 
                   <li class="nav-item ms-5">
@@ -117,35 +117,22 @@
       </div>
 
       <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
-    <div class="card" style="width: 18rem;">
-      <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
-      </div>
-
-      <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
+        <a href="#" class="card-link">Marquer</a>
       </div>
     </div>
   </div>
   <div class="col-12 col-sm-6 col-md-4 col-lg-3  mt-3 p-3">
     <div class="card" style="width: 18rem;">
-      <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
+      <img src="images/svg2.svg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
+        <h5 class="card-title">Mise en place de mesures de sécurité </h5>
+        <p class="card-text">
+          Mise en place de solutions de sécurité telles que pare-feu, antivirus, chiffrement des données, authentification multi-facteurs, etc.
+        </p>
       </div>
 
       <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
+        <a href="#" class="card-link">Marquer</a>
       </div>
     </div>
   </div>
@@ -153,13 +140,57 @@
     <div class="card" style="width: 18rem;">
       <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
+        <h5 class="card-title">Gestion des incidents de sécurité  </h5>
+        <p class="card-text">Réponse aux incidents de sécurité, investigation des violations de données et mise en place de mesures correctives.</p>
       </div>
 
       <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
+        <a href="#" class="card-link">Marquer</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
+    <div class="card" style="width: 18rem;">
+      <img src="images/svg3.svg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Formation en cybersécurité </h5>
+        <p class="card-text">
+          Formation du personnel sur les bonnes pratiques en matière de cybersécurité pour sensibiliser aux risques et prévenir les attaques.
+        </p>
+      </div>
+
+      <div class="card-body">
+        <a href="#" class="card-link">Marquer</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
+    <div class="card" style="width: 18rem;">
+      <img src="images/code-1839877_1920.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Développement d'applications sécurisées </h5>
+        <p class="card-text">
+          Conception et développement d'applications web et mobile sécurisées, en intégrant des mesures de sécurité dès la phase de conception.
+        </p>
+      </div>
+
+      <div class="card-body">
+        <a href="#" class="card-link">Marquer</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
+    <div class="card" style="width: 18rem;">
+      <img src="images/programming-6795536_1280.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Conseil en programmation sécurisée</h5>
+        <p class="card-text">
+          Conseils et bonnes pratiques pour développer des applications robustes et sécurisées, en évitant les vulnérabilités courantes.
+        </p>
+      </div>
+
+      <div class="card-body">
+        <a href="#" class="card-link">Marquer</a>
       </div>
     </div>
   </div>
@@ -167,55 +198,15 @@
     <div class="card" style="width: 18rem;">
       <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
+        <h5 class="card-title">Veille en cybersécurité</h5>
+        <p class="card-text">
+          Surveillance constante des menaces et des tendances en matière de cybersécurité pour anticiper 
+          les nouvelles attaques et protéger proactivement les systèmes.
+        </p>
       </div>
 
       <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
-    <div class="card" style="width: 18rem;">
-      <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
-      </div>
-
-      <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
-    <div class="card" style="width: 18rem;">
-      <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
-      </div>
-
-      <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 p-3">
-    <div class="card" style="width: 18rem;">
-      <img src="images/hacker-5471975_1280.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Audit de sécurité </h5>
-        <p class="card-text">Évaluation de la sécurité des systèmes informatiques, des réseaux et des applications pour 
-          identifier les vulnérabilités et les risques potentiels.</p>
-      </div>
-
-      <div class="card-body">
-        <a href="#" class="card-link">Another link</a>
+        <a href="#" class="card-link">Marquer</a>
       </div>
     </div>
   </div>
@@ -383,7 +374,7 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <div class="d-grid gap-2 col-6 mx-auto mt-3 p-3">
-            <button class="btn btn-primary" type="button">Button</button>
+            <button class="btn btn-primary" type="button">Envoyer</button>
         </div>
   </div>
   <div class="col-md-1 col-12"></div>
